--- a/themes/erfgoedlabo/css/app.css
+++ b/themes/erfgoedlabo/css/app.css
@@ -8677,6 +8677,27 @@ header {
   padding-left: 0;
 }
 
+#search-results a {
+  border-bottom: 1px solid #68ba98;
+}
+
+#search-results a.image {
+  display: inline-block;
+  background: white;
+  border: none;
+}
+
+#search-results img {
+  width: 50px;
+  height: auto;
+  margin-right: 10px;
+}
+
+#search-results td {
+  v-align: top;
+  vertical-align: top;
+}
+
 footer {
   padding: 0rem 0;
   color: rgba(36, 36, 36, 0.7);
