--- a/themes/erfgoedlabo/css/app.css
+++ b/themes/erfgoedlabo/css/app.css
@@ -8747,4 +8747,16 @@ footer .copyright {
   color: rgba(51, 51, 51, 0.4);
 }
 
+.gallery {
+  padding: 2rem 0;
+}
+
+.slick-prev:before, .slick-next:before {
+  color: #68ba98 !important;
+}
+
+.slick-slide img {
+  max-height: 300px;
+}
+
 /*# sourceMappingURL=app.css.map */
